# walker_bot

./: CMakeLists.txt  README.md  package.xml
include/walker_bot/: obstacle_avoidance.hpp  walker.hpp
launch/: walker_bot.launch
results/: cppcheck_result.txt  cpplint_result.txt
src/: obstacle_avoidance.cpp  walker.cpp  walker_bot_node.cpp
